Set jar baseName to vrjc

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 }
 
 jar {
-    baseName = 'vrj'
+    baseName = 'vrjc'
     manifest {
         attributes 'Main-Class': 'ruke.vrj.Main'
     }
