--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'checkstyle'
 
 repositories {
     mavenCentral()
@@ -26,6 +27,17 @@ jar {
 
 compileJava {
     sourceCompatibility = '1.8'
+}
+
+checkstyle {
+    toolVersion '7.5'
+}
+
+tasks.withType(Checkstyle) {
+    reports {
+        xml.enabled false
+        html.enabled false
+    }
 }
 
 task buildGrammar (type:Exec, description: 'Build ANTLR grammar') {
