--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,8 @@ estilo {
     }
 
     checks {
-        CustomImportOrder(override: true) {}
+        CustomImportOrder(remove: true)
+        JavadocParagraph(remove: true)
     }
 }
 
